--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+
 environment:
   sdk: '>=2.19.4 <3.0.0'
 
@@ -31,12 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  dotted_border: ^2.0.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.4
-#  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
